syntax = "proto3";

option csharp_namespace = "GrpcServer5";

package customer;

service Customer {
	rpc GetCustomerInfo(CustomerLookupModel) returns (CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomerModel {
	int32 userId = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	bool isAlive = 5;
	int32 age = 6;
}