// Original file: proto/customer.proto


export interface CustomerModel {
  'userId'?: (number);
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'isAlive'?: (boolean);
  'age'?: (number);
}

export interface CustomerModel__Output {
  'userId': (number);
  'firstName': (string);
  'lastName': (string);
  'email': (string);
  'isAlive': (boolean);
  'age': (number);
}
